--- a/app/src/main/res/layout/listitem.xml
+++ b/app/src/main/res/layout/listitem.xml
@@ -6,11 +6,12 @@
     <ImageView
         android:layout_width="42dp"
         android:layout_height="42dp"
-        android:id="@+id/list_image"/>
+        android:id="@+id/item_img"
+        android:layout_margin="10dp"/>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/list_item"
+        android:id="@+id/item_text"
         android:textSize="20sp"
         android:text=""/>
 
